Prepare project for open-source release on GitHub
Add MIT license, contributing guide, GitHub Actions CI (Node 20+22
matrix), and npm package metadata. Restructure README with badges,
prerequisites, quick-start, and a dedicated LLM agent usage section.
Remove .beads/ from tracking and update .gitignore to exclude .beads/,
.claude/, and nightshift.yaml.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,36 @@
   "version": "0.1.0",
   "description": "Local-first framework for queuing tasks to be executed autonomously by AI agents during off-hours",
   "type": "module",
+  "license": "MIT",
+  "author": "Julien Deray",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/julienderay/night-shift.git"
+  },
+  "homepage": "https://github.com/julienderay/night-shift",
+  "bugs": {
+    "url": "https://github.com/julienderay/night-shift/issues"
+  },
+  "keywords": [
+    "ai-agent",
+    "autonomous",
+    "claude",
+    "cli",
+    "daemon",
+    "llm",
+    "task-queue",
+    "automation",
+    "mcp"
+  ],
+  "engines": {
+    "node": ">=20"
+  },
+  "files": [
+    "dist",
+    "bin",
+    "LICENSE",
+    "README.md"
+  ],
   "bin": {
     "nightshift": "./dist/bin/nightshift.js"
   },
